# 30122-project-andes-indus-analytics

./: README.md  census_long.csv  graphs.ipynb  hello.py  merged_school_data.csv  pyproject.toml
andes-indus/: crime_utils.py  merge.py
andes_indus/: Maps.ipynb  __main__.py  api_get.py  app.py  census_utils.py  cps_school_profiles.csv  crime_utils.py  education.py  figures.py  join_data.py  merge.py  merge_shp.py  quadtree.py  stat_analysis.py
andes_indus/app_layout/: app_utils.py  figures.py  final_section.py  header.py  load_data.py  main_content.py
data/: Dropout_data.xlsx  census.ipynb  census.py  census_df.csv  census_df_long.csv  census_format.ipynb  cesus.py  cleaned_dropout_data.csv  cps_school_profiles.csv  crime.py  data_neighborhoods.csv  data_pumas.csv  merged_school_data.csv  metrics_attendance_2024 (1).xlsx  pop_neighborhood.csv  schools_by_neighborhood.csv  schools_by_puma.csv
data/shapefiles/: data_neighborhoods.dbf  data_neighborhoods.shp  data_neighborhoods.shx  data_pumas.dbf  data_pumas.shp  data_pumas.shx
data/shapefiles/pumas/: chicago_pumas.dbf  chicago_pumas.shp  pumas2022.dbf  pumas2022.shp  pumas2022.shp.ea.iso.xml  pumas2022.shp.iso.xml  pumas2022.shx
data/shapefiles/pumas2010/: pumas2010.dbf  pumas2010.shp  pumas2010.shp.ea.iso.xml  pumas2010.shp.iso.xml  pumas2010.shx
milestones/: final.md  milestone1.md  milestone2.md
tests/: test_fetch_data.py  test_join_data.py  test_merge_shp.py
visualizations/: high_school_rate.html
