[project]
name = "andes_indus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "cssselect>=1.2.0",
    "dash>=2.18.2",
    "dash-bootstrap-components>=1.7.1",
    "dash-extensions>=1.0.20",
    "dash-leaflet>=1.0.15",
    "dash-mantine-components>=0.12.1",
    "datetime>=5.5",
    "folium>=0.19.4",
    "geopandas>=1.0.1",
    "httpx>=0.28.1",
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "lxml>=5.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "plotly>=6.0.0",
    "plotly-express>=0.4.1",
    "pyshp>=2.3.1",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
    "shapely>=2.0.7",
    "sodapy>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
